--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,4 +9,11 @@
         android:icon="@mipmap/outline_add_a_photo_white_18"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_exit_app"
+        android:orderInCategory="100"
+        android:title="@string/title_exit_app"
+        android:icon="@mipmap/outline_exit_to_app_white_18"
+        app:showAsAction="ifRoom"/>
+
 </menu>
